Fix overflow-x

--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -5,7 +5,6 @@ html, body {
     font-style: normal;
     font-size: 16px;
     color: $black; 
-    overflow-x: hidden;
 }
 a {
     color: $black;
