--- a/app/sass/_map.scss
+++ b/app/sass/_map.scss
@@ -24,9 +24,5 @@
     img {
         box-shadow: none !important;
         border-radius: 0;
-        overflow-x: visible !important;
     }
 }
-// #main-body, #map-head {
-//     overflow-x: visible !important;
-// }
